# lsp

./: .gitmodules  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml  test.sh
.github/workflows/: ci.yaml
src/: analyzer.rs  ast.rs  errors.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs
src/analyzer/: address.rs  analysis.rs  builtins.rs  common.rs  expr_analyzer.rs  function.rs  organic_type.rs  scope.rs  statement_analyzer.rs
src/lexer/: doc_loc.rs  source_loc.rs  token.rs
src/lsp/: lsp_backend.rs  semantic_tokens.rs
src/parser/: ast.rs  grammar.lalrpop  lalrpop.rs
tests/: basics.rs  invalid.organic
